# thedeanlab.github.io

./: .gitignore  README.MD  pyproject.toml
.github/: build_docs.yaml
.github/workflows/: static.yml
source/: conf.py  external_links.rst  index.rst  publications.rst
