[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dean-lab-docs"
description = "The Dean Lab, UT Southwestern Medical Center."
authors = [{name = "The Dean Lab, UT Southwestern Medical Center"}]
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3.9",
]

requires-python = ">=3.9.7"
dependencies = [
    "numpydoc",
    "nbconvert",
    "sphinx<6.0.0",
    "sphinx_rtd_theme",
    "sphinx-copybutton",
    "sphinx-issues",
    "sphinx-design",
    "pyyaml",
    "pydata_sphinx_theme==0.10.0rc2",
    "sphinx-toolbox"
    ]


[project.urls]
Source = "https://github.com/TheDeanLab/TheDeanLab.github.io"
